hard-gists/4640256/run.log
=== Docker Run Log for 4640256 ===
Started at: Mi 29. Okt 14:56:01 CET 2025

[2025-10-29 14:56:02] START: Running container for 4640256
[2025-10-29 14:56:02] SUCCESS: Container f824f61906b348ab3440c0b866487d0dd3b84e8c84ccf2140d0fa270a0b9165a started for 4640256
=== Container logs for 4640256 ===
  File "/snippet.py", line 36
    print "*** Unable to register!"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4640256 ===
[2025-10-29 14:56:04] INFO: Container f824f61906b348ab3440c0b866487d0dd3b84e8c84ccf2140d0fa270a0b9165a has stopped
